Updates to typogrpahy and structure

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-leap-day
 repository: hiddebraun-ma/SD-F1M1-Python-Extra
 
-title: "Python Extra - Flex"
-description: "Extra verdieping in het programmeren met Python"
+title: "F1M1Flex - Python Extra"
+description: "Extra verdieping bij het programmeren in Python"
 
 show_downloads: false
 show_github: false
